<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/btnLiveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/livedata"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnBasicRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/basic_room_knowledge"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnRoomCodelabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/room_example_from_codelab"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLifecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/lifeclcle"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/page"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="冒泡排序大数组"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnDoIo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="主线程IO读写"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnWaitLockedResource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="主线程等待获取锁"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnDeadLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="主线程发生死锁"
        android:textAllCaps="false" />

</LinearLayout>